lightnet/lightnet.pxd

# Generated by https://github.com/tarruda/python-autopxd
from libc.stdio cimport FILE
from libc.time cimport clock_t

cdef extern from "pthread.h":
    ctypedef int pthread_t


cdef extern from "_darknet/darknet.h" nogil:
    ctypedef enum LAYER_TYPE:
        CONVOLUTIONAL
        DECONVOLUTIONAL
        CONNECTED
        MAXPOOL
        SOFTMAX
        DETECTION
        DROPOUT
        CROP
        ROUTE
        COST
        NORMALIZATION
        AVGPOOL
        LOCAL
        SHORTCUT
        ACTIVE
        RNN
        GRU
        LSTM
        CRNN
        BATCHNORM
        NETWORK
        XNOR
        REGION
        REORG
        BLANK


cdef extern from "_darknet/darknet.h" nogil:
    int gpu_index

    cdef struct _metadata_s:
        int classes
        char** names

    ctypedef _metadata_s metadata

    metadata get_metadata(char* file)

    cdef struct _tree_s:
        int* leaf
        int n
        int* parent
        int* child
        int* group
        char** name
        int groups
        int* group_size
        int* group_offset

    ctypedef _tree_s tree

    cdef enum ACTIVATION:
        LOGISTIC
        RELU
        RELIE
        LINEAR
        RAMP
        TANH
        PLSE
        LEAKY
        ELU
        LOGGY
        STAIR
        HARDTAN
        LHTAN


    cdef enum BINARY_ACTIVATION:
        MULT
        ADD
        SUB
        DIV


    cdef enum COST_TYPE:
        SSE
        MASKED
        L1
        SEG
        SMOOTH

    cdef struct _update_args_s:
        int batch
        float learning_rate
        float momentum
        float decay
        int adam
        float B1
        float B2
        float eps
        int t

    ctypedef _update_args_s update_args

    #ctypedef network network

    cdef enum _learning_rate_policy_e:
        CONSTANT
        STEP
        EXP
        POLY
        STEPS
        SIG
        RANDOM

    ctypedef _learning_rate_policy_e learning_rate_policy

    #ctypedef layer layer

    cdef struct network:
        int n
        int batch
        size_t* seen
        int* t
        float epoch
        int subdivisions
        layer* layers
        float* output
        learning_rate_policy policy
        float learning_rate
        float momentum
        float decay
        float gamma
        float scale
        float power
        int time_steps
        int step
        int max_batches
        float* scales
        int* steps
        int num_steps
        int burn_in
        int adam
        float B1
        float B2
        float eps
        int inputs
        int outputs
        int truths
        int notruth
        int h
        int w
        int c
        int max_crop
        int min_crop
        float max_ratio
        float min_ratio
        int center
        float angle
        float aspect
        float exposure
        float saturation
        float hue
        int random
        int gpu_index
        tree* hierarchy
        float* input
        float* truth
        float* delta
        float* workspace
        int train
        int index
        float* cost
       
    ctypedef void (*_layer_forward_ft)(layer, network)

    ctypedef void (*_layer_backward_ft)(layer, network)

    ctypedef void (*_layer_update_ft)(layer, update_args)

    ctypedef void (*_layer_forward_gpu_ft)(layer, network)

    ctypedef void (*_layer_backward_gpu_ft)(layer, network)

    ctypedef void (*_layer_update_gpu_ft)(layer, update_args)

    cdef struct layer:
        LAYER_TYPE type
        ACTIVATION activation
        COST_TYPE cost_type
        _layer_forward_ft forward
        _layer_backward_ft backward
        _layer_update_ft update
        _layer_forward_gpu_ft forward_gpu
        _layer_backward_gpu_ft backward_gpu
        _layer_update_gpu_ft update_gpu
        int batch_normalize
        int shortcut
        int batch
        int forced
        int flipped
        int inputs
        int outputs
        int nweights
        int nbiases
        int extra
        int truths
        int h
        int w
        int c
        int out_h
        int out_w
        int out_c
        int n
        int max_boxes
        int groups
        int size
        int side
        int stride
        int reverse
        int flatten
        int spatial
        int pad
        int sqrt
        int flip
        int index
        int binary
        int xnor
        int steps
        int hidden
        int truth
        float smooth
        float dot
        float angle
        float jitter
        float saturation
        float exposure
        float shift
        float ratio
        float learning_rate_scale
        int softmax
        int classes
        int coords
        int background
        int rescore
        int objectness
        int does_cost
        int joint
        int noadjust
        int reorg
        int log
        int tanh
        float alpha
        float beta
        float kappa
        float coord_scale
        float object_scale
        float noobject_scale
        float mask_scale
        float class_scale
        int bias_match
        int random
        float thresh
        int classfix
        int absolute
        int onlyforward
        int stopbackward
        int dontload
        int dontloadscales
        float temperature
        float probability
        float scale
        char* cweights
        int* indexes
        int* input_layers
        int* input_sizes
        int* map
        float* rand
        float* cost
        float* state
        float* prev_state
        float* forgot_state
        float* forgot_delta
        float* state_delta
        float* combine_cpu
        float* combine_delta_cpu
        float* concat
        float* concat_delta
        float* binary_weights
        float* biases
        float* bias_updates
        float* scales
        float* scale_updates
        float* weights
        float* weight_updates
        float* delta
        float* output
        float* squared
        float* norms
        float* spatial_mean
        float* mean
        float* variance
        float* mean_delta
        float* variance_delta
        float* rolling_mean
        float* rolling_variance
        float* x
        float* x_norm
        float* m
        float* v
        float* bias_m
        float* bias_v
        float* scale_m
        float* scale_v
        float* z_cpu
        float* r_cpu
        float* h_cpu
        float* prev_state_cpu
        float* temp_cpu
        float* temp2_cpu
        float* temp3_cpu
        float* dh_cpu
        float* hh_cpu
        float* prev_cell_cpu
        float* cell_cpu
        float* f_cpu
        float* i_cpu
        float* g_cpu
        float* o_cpu
        float* c_cpu
        float* dc_cpu
        float* binary_input
        layer* input_layer
        layer* self_layer
        layer* output_layer
        layer* reset_layer
        layer* update_layer
        layer* state_layer
        layer* input_gate_layer
        layer* state_gate_layer
        layer* input_save_layer
        layer* state_save_layer
        layer* input_state_layer
        layer* state_state_layer
        layer* input_z_layer
        layer* state_z_layer
        layer* input_r_layer
        layer* state_r_layer
        layer* input_h_layer
        layer* state_h_layer
        layer* wz
        layer* uz
        layer* wr
        layer* ur
        layer* wh
        layer* uh
        layer* uo
        layer* wo
        layer* uf
        layer* wf
        layer* ui
        layer* wi
        layer* ug
        layer* wg
        tree* softmax_tree
        size_t workspace_size

    void free_layer(layer)


    #ctypedef network network

    cdef struct _augment_args_s:
        int w
        int h
        float scale
        float rad
        float dx
        float dy
        float aspect

    ctypedef _augment_args_s augment_args

    cdef struct _image_s:
        int w
        int h
        int c
        float* data

    ctypedef _image_s image

    cdef struct _box_s:
        float x
        float y
        float w
        float h

    ctypedef _box_s box

    cdef struct matrix:
        int rows
        int cols
        float** vals

    ctypedef matrix matrix

    cdef struct _data_s:
        int w
        int h
        matrix X
        matrix y
        int shallow
        int* num_boxes
        box** boxes

    ctypedef _data_s data

    cdef enum _data_type_e:
        CLASSIFICATION_DATA
        DETECTION_DATA
        CAPTCHA_DATA
        REGION_DATA
        IMAGE_DATA
        COMPARE_DATA
        WRITING_DATA
        SWAG_DATA
        TAG_DATA
        OLD_CLASSIFICATION_DATA
        STUDY_DATA
        DET_DATA
        SUPER_DATA
        LETTERBOX_DATA
        REGRESSION_DATA
        SEGMENTATION_DATA
        INSTANCE_DATA

    ctypedef _data_type_e data_type

    cdef struct load_args:
        int threads
        char** paths
        char* path
        int n
        int m
        char** labels
        int h
        int w
        int out_w
        int out_h
        int nh
        int nw
        int num_boxes
        int min
        int max
        int size
        int classes
        int background
        int scale
        int center
        int coords
        float jitter
        float angle
        float aspect
        float saturation
        float exposure
        float hue
        data* d
        image* im
        image* resized
        data_type type
        tree* hierarchy

    ctypedef load_args load_args

    cdef struct _box_label_s:
        int id
        float x
        float y
        float w
        float h
        float left
        float right
        float top
        float bottom

    ctypedef _box_label_s box_label

    network* load_network(char* cfg, char* weights, int clear)

    load_args get_base_args(network* net)

    void free_data(data d)

    cdef struct node:
        void* val
        node* next
        node* prev

    ctypedef node node

    cdef struct list:
        int size
        node* front
        node* back

    ctypedef list list

    pthread_t load_data(load_args args)

    list* read_data_cfg(char* filename)

    list* read_cfg(char* filename)

    unsigned char* read_file(char* filename)

    data resize_data(data orig, int w, int h)

    data* tile_data(data orig, int divs, int size)

    data select_data(data* orig, int* inds)

    float **make_probs(network *net)

    void forward_network(network* net)

    void backward_network(network* net)

    void update_network(network* net)

    void axpy_cpu(int N, float ALPHA, float* X, int INCX, float* Y, int INCY)

    void copy_cpu(int N, float* X, int INCX, float* Y, int INCY)

    void scal_cpu(int N, float ALPHA, float* X, int INCX)

    void normalize_cpu(float* x, float* mean, float* variance, int batch, int filters, int spatial)

    void softmax(float* input, int n, float temp, int stride, float* output)

    int best_3d_shift_r(image a, image b, int min, int max)

    void save_image_png(image im, char* name)

    void get_next_batch(data d, int n, int offset, float* X, float* y)

    void grayscale_image_3c(image im)

    void normalize_image(image p)

    void matrix_to_csv(matrix m)

    float train_network_sgd(network* net, data d, int n)

    void rgbgr_image(image im)

    data copy_data(data d)

    data concat_data(data d1, data d2)

    data load_cifar10_data(char* filename)

    float matrix_topk_accuracy(matrix truth, matrix guess, int k)

    void matrix_add_matrix(matrix from_, matrix to)

    void scale_matrix(matrix m, float scale)

    matrix csv_to_matrix(char* filename)

    float* network_accuracies(network* net, data d, int n)

    float train_network_datum(network* net)

    image make_random_image(int w, int h, int c)

    void denormalize_connected_layer(layer l)

    void denormalize_convolutional_layer(layer l)

    void statistics_connected_layer(layer l)

    void rescale_weights(layer l, float scale, float trans)

    void rgbgr_weights(layer l)
